# impellers

./: .gitignore  .gitmodules  BUILD.gn.patch  CONTRIBUTING.md  CREDITS.md  Cargo.toml  DOCS.md  README.md  build.rs  build_impeller.sh  download_flutter_artefacts.sh  generate_impeller_api_json.py  github_ci.gclient  impeller.h  impeller_api.json
.github/: check.yaml
.github/scripts/: install-windows-sdk.ps1
.github/workflows/: assets.yaml  check.yaml
crates/imepllers_codgen/: Cargo.toml
crates/imepllers_codgen/src/: lib.rs  main.rs
examples/: backdrop_blur.rs  blurred_rect.rs  common.rs  empty.rs  fade_color_filter.rs  glfw_vulkan.rs  hello.rs  line_metrics.rs  line_metrics_segfault.rs  rect.rs  rect_stroked.rs  sdl.rs  sdl_vk.rs  star_clip.rs  text.rs
src/: color.rs  lib.rs  sys.rs  win_sys.rs
