[package]
name = "impellers"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/coderedart/flutter"
readme = "README.md"
description = "Bindings to Flutter's 2D vector graphics renderer"
links = "impeller"
exclude = ["/flutter"] # flutter sources are too large and we don't support source builds anyway.

[features]
default = []
sys = []
# This downloads and links the prebuilt-libs of impeller using curl and tar.
prebuilt_libs = []
static_link = ["prebuilt_libs"] # enables static linking with stripped libs (only on linux or windows x64)
debug_static_link = ["static_link"] # static links prebuilt libs that have debug info (only on linux or windows x64)
# will create a .impeller_cache beside target directory and stores the downloaded libraries
# Will skip redownloading libs if they can be found in .impeller_cache. please add the directory to .gitignore
cache_libs = ["prebuilt_libs"]


[dependencies]
euclid = {version = "0.22", features = ["bytemuck"]}
bytemuck = {version = "1"}

[dev-dependencies]
glfw = {version = "0.59", features = ["vulkan"]}
ash = {version = "0.38"}
glow = {version = "0.16"}
image = {version  = "0.25", default-features = false, features = ["jpeg"]}

[[example]]
name = "empty"
required-features = ["sys", "prebuilt_libs"]

[[example]]
name = "common"
crate-type = ["staticlib"]
doc-scrape-examples = true


[workspace]
members = ["crates/*"]



[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]